@@ -16,8 +16,6 @@
 
 package org.springframework.boot.actuate.autoconfigure.context.properties;
 
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.actuate.autoconfigure.endpoint.condition.ConditionalOnAvailableEndpoint;
 import org.springframework.boot.actuate.autoconfigure.endpoint.expose.EndpointExposure;
@@ -50,8 +48,8 @@ public class ConfigurationPropertiesReportEndpointAutoConfiguration {
 	public ConfigurationPropertiesReportEndpoint configurationPropertiesReportEndpoint(
 			ConfigurationPropertiesReportEndpointProperties properties,
 			ObjectProvider<SanitizingFunction> sanitizingFunctions) {
-		return new ConfigurationPropertiesReportEndpoint(
-				sanitizingFunctions.orderedStream().collect(Collectors.toList()), properties.getShowValues());
+		return new ConfigurationPropertiesReportEndpoint(sanitizingFunctions.orderedStream().toList(),
+				properties.getShowValues());
 	}
 
 	@Bean
