@@ -16,8 +16,6 @@
 
 package org.springframework.boot.actuate.autoconfigure.env;
 
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.actuate.autoconfigure.endpoint.condition.ConditionalOnAvailableEndpoint;
 import org.springframework.boot.actuate.autoconfigure.endpoint.expose.EndpointExposure;
@@ -48,7 +46,7 @@ public class EnvironmentEndpointAutoConfiguration {
 	@ConditionalOnMissingBean
 	public EnvironmentEndpoint environmentEndpoint(Environment environment, EnvironmentEndpointProperties properties,
 			ObjectProvider<SanitizingFunction> sanitizingFunctions) {
-		return new EnvironmentEndpoint(environment, sanitizingFunctions.orderedStream().collect(Collectors.toList()),
+		return new EnvironmentEndpoint(environment, sanitizingFunctions.orderedStream().toList(),
 				properties.getShowValues());
 	}
 
